@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model


class Collaborator {
    name
    dateOfBirth
    admissionDate
    address
    phoneNumber
    email
    cc
    cardNumber

}
class VehicleFleetManager {

}
class HumanResourceManager {


}

class Team{

}

class Vehicle{
    brand
    model
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    checkupFrequency
    licensePlate
}

class CheckUp{
    date
    km
}

class Skill{
    name
}

class Job{
    name
}


Collaborator  <|--  HumanResourceManager
Collaborator <|- VehicleFleetManager
HumanResourceManager "1" -- "*" Collaborator : Registers >
Collaborator "0..1" -- "*" Vehicle : drives >
Collaborator "*" -- "1" Team : Contains <
Vehicle "1" -- "*" CheckUp :  does >
HumanResourceManager "1" -- "1..*" Skill : Registers >
Skill "1..*" -- "*" Collaborator : has <
Job "1" -- "1..*" Collaborator : has <
HumanResourceManager "*" - "1..*" Job : Registers >
VehicleFleetManager "1" -- "1..*" Vehicle : Registers >

@enduml